gccida/c2/reload_combine_note_use
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9450:6: error: use of undeclared identifier 'v34'
rtx *v34; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9472:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v8] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9501:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v20.rtwint = ( __int64)v3->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9505:15: error: use of undeclared identifier 'off_7088B8'
fancy_abort( &off_7088B8[4], 8994, "reload_combine_note_use"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9517:13: error: expected ';' after expression
v14 = ( rtx)v3[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9523:15: error: use of undeclared identifier 'off_7088B8'
fancy_abort( &off_7088B8[4], 9015, "reload_combine_note_use"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9532:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v18] - 5) < 2 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9571:14: error: expected expression
v34 = ( rtx *)( v31 + 10488712); 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9571:1: error: use of undeclared identifier 'v34'
v34 = ( rtx *)( v31 + 10488712); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9574:2: error: use of undeclared identifier 'v34'; did you mean 'v36'?
*v34 = v14; 
 ^~~
 v36
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9452:13: note: 'v36' declared here
const char *v36; // [rsp+0h] [rbp-38h] 
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9574:6: error: read-only variable is not assignable
*v34 = v14; 
~~~~ ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9577:31: error: use of undeclared identifier 'v34'; did you mean 'v36'?
else if ( !rtx_equal_p( v14, *v34) ) 
                              ^~~
                              v36
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9452:13: note: 'v36' declared here
const char *v36; // [rsp+0h] [rbp-38h] 
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9592:13: error: expected expression
xp = ( rtx *)&v3[1]; 
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9611:33: error: expected expression
reload_combine_note_use( ( rtx *)&v25[2 * v26], insn); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9617:33: error: expected expression
reload_combine_note_use( ( rtx *)( v27 + *( ( _QWORD *)v3 + v23)), insn); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/reload1.c:9627:33: error: expected expression
reload_combine_note_use( ( rtx *)&v3->fld[v22], insn); 
                                ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/reload_combine_note_use/src/obj/reload1.o] Error 1
